<resources>
    <string name="app_name">Chatter</string>
    <string name="todo">TODO</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="e_mail">Enter your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password"> Enter Password</string>
    <string name="enter_name">Enter your name</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">770364702538-a0q2foqkdr6kie6svptntru49otbfst2.apps.googleusercontent.com</string>
    <string name="facebook2">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="signin">SignIN</string>
    <string name="login">Login</string>
    <string name="todo21">TODO</string>
    <string name="dasda">TODO</string>
    <string name="lastmessage">lastMessage</string>
    <string name="username">UserName</string>
    <string name="ggug">TODO</string>
    <string name="accept">Accept</string>

    <string name="incoming_videocall">Incoming videocall</string>
    <string name="please_check">please_check_your_internet_connection</string>
    <string name="retry">Retry</string>
    <string name="name">Name</string>
    <string name="decline_call">Decline call</string>
</resources>