<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_orgnl_bg"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/_2sdp"
        android:text="SignIn"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/dasda"
        android:importantForAccessibility="no"
        android:src="@drawable/c_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edtUsername"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edttxt_bg"
        android:ems="14"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="@dimen/_9sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edttxt_bg"
        android:ellipsize="end"
        android:ems="14"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:maxEms="10"
        android:maxLines="1"
        android:padding="@dimen/_9sdp"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtUsername"
        app:layout_constraintStart_toStartOf="@+id/edtUsername"
        app:layout_constraintTop_toBottomOf="@id/edtUsername" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/edttxt_bg"
        android:ellipsize="end"
        android:ems="14"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxEms="10"
        android:maxLines="1"
        android:padding="@dimen/_9sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/signup_grad_btn"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/textSignUpPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp">

        <Button
            android:id="@+id/btnGoogle"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/google_login_btn"
            android:drawableStart="@drawable/google_g_icon"
            android:padding="@dimen/_5sdp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="#040404"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btnFacebook"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_weight="1"
            android:background="@drawable/face_btn_grad"
            android:drawableStart="@drawable/facebook_logo"
            android:padding="5dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textSignUpPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_up_with_phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
