<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_orgnl_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todo21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/c_1"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/edtEmailIn"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/edtEmailIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/edttxt_bg"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="@dimen/_5sdp"
        android:ems="14"
        android:hint="@string/gmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@id/edtPasswordIn"
        app:layout_constraintEnd_toEndOf="@+id/txtLogin"
        app:layout_constraintStart_toStartOf="@+id/txtLogin"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtPasswordIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/edttxt_bg"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="@dimen/_5sdp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailIn"
        app:layout_constraintStart_toStartOf="@+id/edtEmailIn"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailIn"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/signup_grad_btn"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordIn"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordIn"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordIn"
        tools:ignore="VisualLintButtonSize" />

    <!--    <TextView-->
    <!--        android:id="@+id/SignUpWithPhone"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/sign_up_with_phone"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="@dimen/_18ssp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
    <!--        tools:ignore="VisualLintOverlap" />-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout2"-->
    <!--        style="?android:attr/buttonBarStyle"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnSignIn">-->

    <!--        <Button-->
    <!--            android:id="@+id/btnGoogle"-->
    <!--            style="?android:attr/buttonBarButtonStyle"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="16dp"-->
    <!--            android:layout_marginEnd="@dimen/_16sdp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:background="@drawable/google_login_btn"-->
    <!--            android:drawableLeft="@drawable/google_g_icon"-->
    <!--            android:paddingLeft="@dimen/_5sdp"-->
    <!--            android:text="@string/google"-->
    <!--            android:textAllCaps="false"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:textSize="@dimen/_12ssp"-->
    <!--            tools:ignore="VisualLintButtonSize" />-->

    <!--        <Button-->
    <!--            android:id="@+id/btnFacebook"-->
    <!--            style="?android:attr/buttonBarButtonStyle"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginEnd="16dp"-->
    <!--            android:layout_weight="1"-->
    <!--            android:background="@drawable/face_btn_grad"-->
    <!--            android:drawableLeft="@drawable/facebook_logo"-->
    <!--            android:drawablePadding="@dimen/_5sdp"-->
    <!--            android:paddingLeft="@dimen/_5sdp"-->
    <!--            android:text="@string/facebook2"-->
    <!--            android:textAllCaps="false"-->
    <!--            android:textColor="#B2DFDB"-->
    <!--            android:textSize="@dimen/_12ssp"-->
    <!--            tools:ignore="VisualLintButtonSize" />-->
    <!--    </LinearLayout>-->

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_4sdp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>